Try to fix layout issue in import screen: https://github.com/OfficeDev/script-lab/issues

--- a/src/client/assets/styles/containers/_import.scss
+++ b/src/client/assets/styles/containers/_import.scss
@@ -49,6 +49,12 @@ import {
         height: 100%;
         display: flex;
         flex-direction: column;
+
+        > collapse {
+            -webkit-box-flex: 0;
+            -ms-flex: none;
+            flex: none;
+        }
     }
 
     &__title {
